--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "graphql": "^16.9.0",
     "mongodb": "^6.9.0"
   }
 }
