--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
+    "apollo-server-express": "^3.13.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
